--- a/templates/index.html
+++ b/templates/index.html
@@ -75,14 +75,14 @@
         <div class="col-md-6">
           <h2 class="section-title">Upcoming events</h2>
           <ul class="event-list">
-            {% for event in events %}
+            {% for events in page_obj %}
             <li>
               <a href="#">
-                <h3 class="event-title">{{ event.purpose }}</h3>
+                <h3 class="event-title">{{ events.purpose }}</h3>
                 <span class="event-meta">
-                  <span><i class="fa fa-calendar"></i>{{ event.date }}</span>
+                  <span><i class="fa fa-calendar"></i>{{ events.date }}</span>
                   <span
-                    ><i class="fa fa-map-marker"></i>{{ event.location }}</span
+                    ><i class="fa fa-map-marker"></i>{{ events.location }}</span
                   >
                 </span>
               </a>
