--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,7 +9,7 @@
                     </p>
                     <ul class="address">
                         <li>
-                            <i class="fa fa-map-marker"></i> 329 Church St, Garland, TX 75042
+                            <i class="fa fa-map-marker"></i> Moniya Ibadan Oyo state
                         </li>
                         <li><i class="fa fa-phone"></i> (425) 853 442 552</li>
                         <li><i class="fa fa-envelope"></i> info@yourchurch.com</li>
@@ -61,7 +61,7 @@
         </div>
         <!-- .row -->
 
-        <p class="colophon">Copyright 2014 True Church. All right reserved</p>
+        <p class="colophon">Copyright 2021 True Church. All right reserved</p>
     </div>
     <!-- .container -->
 </footer>
