--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
       <h2 class="section-title">Recent news</h2>
 
       <div class="row">
+        {% for news in pag_obj %}
         <div class="col-md-3 col-sm-6">
           <div class="news">
             <image
@@ -13,55 +14,14 @@
               src="{% static 'images/news-thumb-1.jpg' %}"
             ></image>
             <h3 class="news-title">
-              <a href="#">laboris nisi ut aliquip</a>
+              <a href="#">{{ news.title }}</a>
             </h3>
             <small class="date"
-              ><i class="fa fa-calendar"></i>24 mar 2014</small
+              ><i class="fa fa-calendar"></i>{{ news.date }}</small
             >
           </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <div class="news">
-            <image
-              class="news-image"
-              src="{% static 'images/news-thumb-2.jpg' %}"
-            ></image>
-            <h3 class="news-title">
-              <a href="#">laboris nisi ut aliquip</a>
-            </h3>
-            <small class="date"
-              ><i class="fa fa-calendar"></i>24 mar 2014</small
-            >
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <div class="news">
-            <image
-              class="news-image"
-              src="{% static 'images/news-thumb-3.jpg' %}"
-            ></image>
-            <h3 class="news-title">
-              <a href="#">laboris nisi ut aliquip</a>
-            </h3>
-            <small class="date"
-              ><i class="fa fa-calendar"></i>24 mar 2014</small
-            >
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <div class="news">
-            <image
-              class="news-image"
-              src="{% static 'images/news-thumb-4.jpg' %}"
-            ></image>
-            <h3 class="news-title">
-              <a href="#">laboris nisi ut aliquip</a>
-            </h3>
-            <small class="date"
-              ><i class="fa fa-calendar"></i>24 mar 2014</small
-            >
-          </div>
-        </div>
+        {% endfor %}
       </div>
       <!-- .row -->
     </div>
@@ -97,52 +57,24 @@
         <div class="col-md-6">
           <h2 class="section-title">Latest seremons</h2>
           <ul class="seremon-list">
-            <li>
-              <img src="{% static 'images/small-thumb-1.jpg' %}" alt="" />
-              <div class="seremon-detail">
-                <h3 class="seremon-title">
-                  <a href="#">I believe in god with all my heart</a>
-                </h3>
-                <div class="seremon-meta">
-                  <div class="pastor"><i class="fa fa-user"></i> Alan Ray</div>
-                  <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <img src="{% static 'images/small-thumb-2.jpg' %}" alt="" />
-              <div class="seremon-detail">
-                <h3 class="seremon-title">
-                  <a href="#">Trusting in jesus and god</a>
-                </h3>
-                <div class="seremon-meta">
-                  <div class="pastor">
-                    <i class="fa fa-user"></i> David Clark
-                  </div>
-                  <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
-                  </div>
-                </div>
-              </div>
-            </li>
+            {% for sermon in pags_obj %}
             <li>
               <img src="{% static 'images/small-thumb-3.jpg' %}" alt="" />
               <div class="seremon-detail">
                 <h3 class="seremon-title">
-                  <a href="#">Love your kids</a>
+                  <a href="#">{{ sermon.title }}</a>
                 </h3>
                 <div class="seremon-meta">
                   <div class="pastor">
-                    <i class="fa fa-user"></i> anthony roberts
+                    <i class="fa fa-user"></i> {{ sermon.user }}
                   </div>
                   <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
+                    <i class="fa fa-calendar"></i> {{ sermon.date }}
                   </div>
                 </div>
               </div>
             </li>
+            {% endfor %}
           </ul>
 
           <div class="text-center">
