--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,8 @@
     <!-- Loading main css file -->
     <link rel="stylesheet" href="{% static 'style.css' %}" />
 
-    <!--[if lt IE 9]>
-      <script src="js/ie-support/html5.js"></script>
-      <script src="js/ie-support/respond.js"></script>
-    <![endif]-->
+    <script src="{% static 'js/ie-support/html5.js' %}"></script>
+    <script src="{% static 'js/ie-support/respond.js' %}"></script>
   </head>
 
   <body>
@@ -45,18 +43,22 @@
             <button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
             <ul class="menu">
               <li class="menu-item current-menu-item">
-                <a href="index.html">Homepage <small>Lorem ipsum</small></a>
+                <a href="{% url 'home' %}"
+                  >Homepage <small>Lorem ipsum</small></a
+                >
               </li>
               <li class="menu-item">
                 <a href="#">Pastors <small>Cupidatat non proident</small></a>
               </li>
               <li class="menu-item">
-                <a href="seremons.html"
+                <a href="{% url 'sermon' %}"
                   >Seremons <small>Laboris nisi aliquip</small></a
                 >
               </li>
               <li class="menu-item">
-                <a href="events.html">Events <small>Sunt in culpa</small></a>
+                <a href=" {% url 'event' %} "
+                  >Events <small>Sunt in culpa</small></a
+                >
               </li>
               <li class="menu-item">
                 <a href="families.html">Families <small>Aute irure</small></a>
