--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
           </ul>
 
           <div class="text-center">
-            <a href="#" class="button">See all events</a>
+            <a href="{% url 'event' %}" class="button">See all events</a>
           </div>
         </div>
         <div class="col-md-6">
@@ -78,7 +78,7 @@
           </ul>
 
           <div class="text-center">
-            <a href="#" class="button">See all seremons</a>
+            <a href="{% url 'sermon' %}" class="button">See all seremons</a>
           </div>
         </div>
       </div>
