made changes in templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1.0,maximum-scale=1"
     />
 
-    <title>True Church</title>
+    <title>Evidence of Christ Victory Church</title>
 
     <!-- Loading third party fonts -->
     <link
@@ -53,8 +53,14 @@
       <header class="site-header">
         <div class="container">
           <a href="#" class="branding">
-            <img src="{% static 'images/logo.png' %}" alt="" class="logo" />
-            <h1 class="site-title">Christ Church</h1>
+            <img
+              src="{% static 'images/cclogo.png' %}"
+              width="150"
+              height="120"
+              alt=""
+              class="logo"
+            />
+            <h1 class="site-title">Evidence of Christ Victory Church</h1>
           </a>
 
           <div class="main-navigation">
@@ -87,7 +93,9 @@
           <li data-bg-image="{% static 'images/slide-1.jpg' %}">
             <div class="container">
               <div class="slide-content">
-                <small class="slide-subtitle">True Church</small>
+                <small class="slide-subtitle"
+                  >Evidence of Christ Victory Church</small
+                >
                 <h2 class="slide-title">Place with a real love</h2>
 
                 <a href="#" class="button">See our families</a>
@@ -98,7 +106,9 @@
           <li data-bg-image="{% static 'images/slide-1.jpg' %}">
             <div class="container">
               <div class="slide-content">
-                <small class="slide-subtitle">True Church</small>
+                <small class="slide-subtitle"
+                  >Evidence of Christ Victory Church</small
+                >
                 <h2 class="slide-title">Place with a real love</h2>
 
                 <a href="#" class="button">See our families</a>
