--- a/templates/sermon.html
+++ b/templates/sermon.html
@@ -4,40 +4,21 @@
     <div class="container">
       <div class="row">
         <div class="content col-md-8">
-          <h2 class="section-title">Upcoming seremons</h2>
+          <h2 class="section-title">Upcoming sermons</h2>
           <ul class="seremon-list large">
-            <li>
-              <img src="images/thumb-1-120.png" alt="" />
-              <div class="seremon-detail">
-                <h3 class="seremon-title">
-                  <a href="#">I believe in god with all my heart</a>
-                </h3>
-                <div class="seremon-meta">
-                  <div class="pastor"><i class="fa fa-user"></i> Alan Ray</div>
-                  <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
-                  </div>
-                </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam
-                  molestiae doloribus deserunt minus a dicta labore beatae
-                  maiores assumenda. Laudantium nihil, maxime molestiae soluta
-                  doloribus magnam eum. Nesciunt, ea, sint.
-                </p>
-              </div>
-            </li>
+            {% for sermon in object_list %}
             <li>
               <img src="images/thumb-2-120.jpg" alt="" />
               <div class="seremon-detail">
                 <h3 class="seremon-title">
-                  <a href="#">Trusting in jesus and god</a>
+                  <a href="#">{{ sermon.title }}</a>
                 </h3>
                 <div class="seremon-meta">
                   <div class="pastor">
-                    <i class="fa fa-user"></i> David Clark
+                    <i class="fa fa-user"></i> {{ sermon.user }}
                   </div>
                   <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
+                    <i class="fa fa-calendar"></i> {{ sermon.date }}
                   </div>
                 </div>
                 <p>
@@ -49,111 +30,33 @@
                 </p>
               </div>
             </li>
-            <li>
-              <img src="images/thumb-3-120.jpg" alt="" />
-              <div class="seremon-detail">
-                <h3 class="seremon-title"><a href="#">Love your kids</a></h3>
-                <div class="seremon-meta">
-                  <div class="pastor">
-                    <i class="fa fa-user"></i> anthony roberts
-                  </div>
-                  <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
-                  </div>
-                </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officiis nisi rem est amet, ducimus, aut, atque error
-                  accusantium facilis ab adipisci! Cumque, corrupti sapiente
-                  dolores saepe adipisci dignissimos quod unde.
-                </p>
-              </div>
-            </li>
-            <li>
-              <img src="images/thumb-2-120.jpg" alt="" />
-              <div class="seremon-detail">
-                <h3 class="seremon-title">
-                  <a href="#">Trusting in jesus and god</a>
-                </h3>
-                <div class="seremon-meta">
-                  <div class="pastor">
-                    <i class="fa fa-user"></i> David Clark
-                  </div>
-                  <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
-                  </div>
-                </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Veniam dignissimos corporis quidem at nobis impedit
-                  perspiciatis, accusantium qui natus amet sapiente voluptate
-                  doloribus laboriosam officia deserunt possimus cumque
-                  inventore. Ipsum.
-                </p>
-              </div>
-            </li>
+            {% endfor %}
           </ul>
 
           <h2 class="section-title">Latest seremons</h2>
           <ul class="seremon-list">
-            <li>
-              <img src="images/small-thumb-1.jpg" alt="" />
-              <div class="seremon-detail">
-                <h3 class="seremon-title">
-                  <a href="#">I believe in god with all my heart</a>
-                </h3>
-                <div class="seremon-meta">
-                  <div class="pastor"><i class="fa fa-user"></i> Alan Ray</div>
-                  <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <img src="images/small-thumb-2.jpg" alt="" />
-              <div class="seremon-detail">
-                <h3 class="seremon-title">
-                  <a href="#">Trusting in jesus and god</a>
-                </h3>
-                <div class="seremon-meta">
-                  <div class="pastor">
-                    <i class="fa fa-user"></i> David Clark
-                  </div>
-                  <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
-                  </div>
-                </div>
-              </div>
-            </li>
+            {% for sermon in object_list %}
             <li>
               <img src="images/small-thumb-3.jpg" alt="" />
               <div class="seremon-detail">
-                <h3 class="seremon-title"><a href="#">Love your kids</a></h3>
+                <h3 class="seremon-title">
+                  <a href="#">{{ sermon.title }}</a>
+                </h3>
                 <div class="seremon-meta">
                   <div class="pastor">
-                    <i class="fa fa-user"></i> anthony roberts
+                    <i class="fa fa-user"></i> {{ sermon.user }}
                   </div>
                   <div class="date">
-                    <i class="fa fa-calendar"></i> 18 mar 2014
+                    <i class="fa fa-calendar"></i>
+                    <a href="{{ sermon.mp3.url }}">{{ sermon.mp3 }}</a>
                   </div>
                 </div>
               </div>
             </li>
+            {% endfor %}
           </ul>
         </div>
         <div class="sidebar col-md-3 col-md-offset-1">
-          <div class="widget">
-            <h3 class="widget-title">Categories</h3>
-            <ul class="arrow">
-              <li><a href="#">Perspiciatis unde</a></li>
-              <li><a href="#">Omnis iste natus</a></li>
-              <li><a href="#">Voluptatem accusantium</a></li>
-              <li><a href="#">Doloremque eaque</a></li>
-              <li><a href="#">Totam rem aperiam</a></li>
-            </ul>
-          </div>
-
           <div class="widget">
             <h3 class="widget-title">Donations</h3>
             <p>
@@ -161,29 +64,6 @@
               earum adipisci, explicabo perferendis.
             </p>
             <a href="#" class="button">Make a donation</a>
-          </div>
-
-          <div class="widget">
-            <h3 class="widget-title">Gallery updates</h3>
-
-            <div class="galery-thumb">
-              <a href="#"><img src="images/gallery-thumb-1.jpg" alt="" /></a>
-              <a href="#"><img src="images/gallery-thumb-2.jpg" alt="" /></a>
-              <a href="#"><img src="images/gallery-thumb-3.jpg" alt="" /></a>
-              <a href="#"><img src="images/gallery-thumb-4.jpg" alt="" /></a>
-              <a href="#"><img src="images/gallery-thumb-5.jpg" alt="" /></a>
-              <a href="#"><img src="images/gallery-thumb-6.jpg" alt="" /></a>
-            </div>
-          </div>
-
-          <div class="widget">
-            <h3 class="widget-title">Text widget</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              aliquam obcaecati velit, atque necessitatibus molestias ullam
-              tempore itaque quidem sequi ea sed consectetur, eligendi
-              cupiditate saepe! Hic veniam maiores explicabo.
-            </p>
           </div>
         </div>
       </div>
