--- a/templates/base.html
+++ b/templates/base.html
@@ -71,10 +71,10 @@
               </li>
               <li class="menu-item"><a href="#">Pastors</a></li>
               <li class="menu-item">
-                <a href="{% url 'sermon' %}">Seremons</a>
+                <a href="{% url 'sermon' %}">Sermons</a>
               </li>
               <li class="menu-item"><a href="{% url 'event' %}">Events</a></li>
-              <li class="menu-item"><a href="families.html">Families</a></li>
+              <li class="menu-item"><a href="#">Offering</a></li>
               <li class="menu-item"><a href="#">Contact</a></li>
               <li class="menu-item">
                 <a href="{% url 'visit' %}">First Timers</a>
