--- a/templates/sermon.html
+++ b/templates/sermon.html
@@ -21,18 +21,58 @@
                     <i class="fa fa-calendar"></i> {{ sermon.date }}
                   </div>
                 </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Veniam dignissimos corporis quidem at nobis impedit
-                  perspiciatis, accusantium qui natus amet sapiente voluptate
-                  doloribus laboriosam officia deserunt possimus cumque
-                  inventore. Ipsum.
-                </p>
+                <i class="fa fa-music"></i>
+                {% if sermon.mp3 %}
+                <a href="{{ sermon.mp3.url }}" download
+                  >Click here to download audio message</a
+                >
+                {% endif %}
+                <p>{{ sermon.text }}</p>
               </div>
             </li>
             {% endfor %}
           </ul>
+<p>
+          {% if is_paginated %}
+          <nav class="d-flex justify-content-center wow fadeIn">
+            <ul class="pagination pg-blue">
+              {% if page_obj.has_previous %}
+              <li class="page-item">
+                <a
+                  class="page-link"
+                  href="?page={{ page_obj.previous_page_number }}"
+                  aria-label="Previous"
+                >
+                  <span aria-hidden="true">&laquo;</span>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              {% endif %}
 
+              <li class="page-item active">
+                <a class="page-link" href="?page={{ page_obj.number }}"
+                  >{{ page_obj.number }}
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+
+              {% if page_obj.has_next %}
+              <li class="page-item">
+                <a
+                  class="page-link"
+                  href="?page={{ page_obj.next_page_number }}"
+                  aria-label="Next"
+                >
+                  <span aria-hidden="true">&raquo;</span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+              {% endif %}
+            </ul>
+          </nav>
+          {% endif %}
+          </p> 
+          {% comment %}
           <h2 class="section-title">Latest seremons</h2>
           <ul class="seremon-list">
             {% for sermon in object_list %}
@@ -57,6 +97,7 @@
             </li>
             {% endfor %}
           </ul>
+          {% endcomment %}
         </div>
         <div class="sidebar col-md-3 col-md-offset-1">
           <div class="widget">
